--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/main.js",
   "type": "commonjs",
   "scripts": {
-  "name": "evolution-api",
+    "name": "evolution-api",
   "version": "2.2.3",
   "description": "API to control WhatsApp features through HTTP requests.",
   "main": "dist/main.js",
@@ -21,8 +21,7 @@
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
     "migration:revert": "npm run typeorm -- migration:revert",
-    "start:prod": "node dist/main.js" // <--- Este script es el importante
-  },
+    "start:prod": "node dist/main.js" // <--- Este script es el importante  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/EvolutionAPI/evolution-api.git"
